force-app/main/default/objects/Relationship__c/fields/Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary account in this relationship.</description>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships (As Primary)</relationshipLabel>
    <relationshipName>Primary_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>