force-app/main/default/objects/Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>Type of relationship or product line between accounts.</description>
    <label>Relationship Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Workers Comp</fullName>
            </value>
            <value>
                <fullName>Product Line Alpha</fullName>
            </value>
            <value>
                <fullName>Product Line Beta</fullName>
            </value>
            <value>
                <fullName>Product Gamma</fullName>
            </value>
            <value>
                <fullName>Product Omega</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>