force-app/main/default/objects/Relationship__c/fields/Secondary_Account__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The secondary account in this relationship.</description>
    <label>Secondary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships (As Secondary)</relationshipLabel>
    <relationshipName>Secondary_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>